--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body.home-bg #view .card{
 .progress span{
   display:block;
   height:100%;
-  background:linear-gradient(90deg, #22c55e, #4ade80);
+  background: linear-gradient(90deg, rgb(186, 168, 221), rgb(203, 186, 221));
 }
 
 /* Text */
